deploy static content

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  padding: 0;
+  margin: 0;
+}
+
 @keyframes rotation {
   from {
     transform: rotate(180deg);
@@ -8,8 +13,7 @@
   }
 }
 
-body {
-  margin: 0;
+.wrapp {
   height: 100vh;
   display: flex;
   align-items: center;
