add blocks del pseudo elements

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
   border-radius: 50%;
 }
 
-.clock:after {
+.seconds {
   content: "";
   background: #4b9aaa;
   position: absolute;
@@ -54,7 +54,7 @@ body {
   animation: rotation 60s infinite linear;
 }
 
-.clock:before {
+.minutes {
   content: "";
   background: #d15559;
   position: absolute;
